# azahar_libretro

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  ci_fail.txt
.ci/: docker.sh  linux.sh
.github/workflows/: build.yml  libretro.yml
docker/azahar-room/: Dockerfile
src/: CMakeLists.txt
src/android/app/: build.gradle.kts
src/android/app/src/main/java/org/citra/citra_emu/activities/: EmulationActivity.kt
src/android/app/src/main/java/org/citra/citra_emu/features/settings/model/: BooleanSetting.kt
src/android/app/src/main/java/org/citra/citra_emu/features/settings/model/view/: InputBindingSetting.kt
src/android/app/src/main/java/org/citra/citra_emu/features/settings/ui/: SettingsActivity.kt  SettingsAdapter.kt
src/android/app/src/main/java/org/citra/citra_emu/ui/main/: MainActivity.kt
src/android/app/src/main/jni/: config.cpp  default_ini.h
src/android/app/src/main/res/values/: strings.xml
src/audio_core/: CMakeLists.txt  dsp_interface.cpp  input_details.cpp  input_details.h  libretro_sink.cpp  libretro_sink.h  sink.h  sink_details.h
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  core_settings.cpp  core_settings.h  environment.cpp  environment.h  libretro_vk.cpp
src/citra_libretro/emu_window/: libretro_window.cpp  libretro_window.h
src/citra_libretro/input/: mouse_tracker.cpp  mouse_tracker.h
src/citra_qt/: bootmanager.cpp  citra_qt.cpp
src/citra_qt/configuration/: config.cpp  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui
src/citra_sdl/: config.cpp  default_ini.h
src/common/: CMakeLists.txt  error.cpp  file_util.cpp  file_util.h  settings.cpp  settings.h  zstd_compression.cpp
src/common/logging/: backend.cpp
src/core/: core.h  savestate.cpp
src/core/frontend/: emu_window.h
src/core/hle/service/soc/: soc_u.cpp
src/core/loader/: loader.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h
src/video_core/renderer_opengl/: gl_shader_disk_cache.cpp  renderer_opengl.cpp
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  renderer_vulkan.h  vk_blit_helper.cpp  vk_blit_helper.h  vk_instance.cpp  vk_instance.h  vk_resource_pool.cpp  vk_texture_runtime.cpp  vk_texture_runtime.h
